--- a/SPO_Pr_2/Base.lproj/Main.storyboard
+++ b/SPO_Pr_2/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,7 +674,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="SPO_Pr_2" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -687,13 +688,13 @@
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
-                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <rect key="screenRect" x="0.0" y="0.0" width="1440" height="875"/>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                         </connections>
                     </window>
                     <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
+                        <segue destination="nei-yL-J58" kind="relationship" relationship="window.shadowedContentViewController" id="TUV-GV-laR"/>
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -701,17 +702,50 @@
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="hIz-AP-VOD">
+        <scene sceneID="jvA-a5-CAw">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                <viewController id="nei-yL-J58" customClass="ViewController" customModule="SPO_Pr_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="G1e-Hg-MD9">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cec-Mc-cVU">
+                                <rect key="frame" x="173" y="53" width="104" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="1jd-6v-u4Y"/>
+                                    <constraint firstAttribute="height" constant="20" id="Kzy-om-qeA"/>
+                                </constraints>
+                                <buttonCell key="cell" type="push" title="Write to file" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="tje-KF-AHm">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="didClickWrite:" target="nei-yL-J58" id="cQH-az-54i"/>
+                                </connections>
+                            </button>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="Jng-7z-dKj">
+                                <rect key="frame" x="100" y="127" width="250" height="133"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="133" id="WdK-Fc-ux3"/>
+                                </constraints>
+                            </customView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Jng-7z-dKj" secondAttribute="trailing" constant="100" id="1Eo-Xc-z4G"/>
+                            <constraint firstItem="cec-Mc-cVU" firstAttribute="centerX" secondItem="G1e-Hg-MD9" secondAttribute="centerX" id="Ucp-pz-dzi"/>
+                            <constraint firstItem="Jng-7z-dKj" firstAttribute="leading" secondItem="G1e-Hg-MD9" secondAttribute="leading" constant="100" id="VbD-iD-52I"/>
+                            <constraint firstAttribute="bottom" secondItem="cec-Mc-cVU" secondAttribute="bottom" constant="60" id="oa1-JS-T7E"/>
+                            <constraint firstItem="cec-Mc-cVU" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Jng-7z-dKj" secondAttribute="bottom" constant="47" id="sbw-m1-wFO"/>
+                            <constraint firstItem="Jng-7z-dKj" firstAttribute="top" secondItem="G1e-Hg-MD9" secondAttribute="top" constant="40" id="u8W-jJ-cOp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backView" destination="Jng-7z-dKj" id="vKS-dp-UVZ"/>
+                    </connections>
                 </viewController>
-                <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="Bzz-H9-XbW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="89" y="724"/>
         </scene>
     </scenes>
 </document>
